--- a/src/app/upgrade/containers/upgrade.component.html
+++ b/src/app/upgrade/containers/upgrade.component.html
@@ -26,6 +26,7 @@
               <input formControlName="innocentLimit" matInput placeholder="이노센트 한도 (입력한 숫자 이상 성공시 스톱)">
             </mat-form-field>
           </form>
+          <button (click)="calculate()" mat-raised-button color="primary">계산</button>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
