--- a/src/app/upgrade/containers/upgrade.component.html
+++ b/src/app/upgrade/containers/upgrade.component.html
@@ -23,6 +23,9 @@
               <input formControlName="whitePercentage" matInput placeholder="순백의 주문서 확률 (0~1)">
             </mat-form-field>
             <mat-form-field>
+              <input formControlName="hammerPercentage" matInput placeholder="황금 망치 확률 (0~1)">
+            </mat-form-field>
+            <mat-form-field>
               <input formControlName="innocentLimit" matInput placeholder="이노센트 한도 (입력한 숫자 이상 성공시 스톱)">
             </mat-form-field>
           </form>
