--- a/src/app/upgrade/containers/upgrade.component.html
+++ b/src/app/upgrade/containers/upgrade.component.html
@@ -1,6 +1,6 @@
 <div class="grid-container">
-  <h1 class="mat-h1">주문의 흔적</h1>
-  <mat-grid-list [cols]="(isHandset$ | async) ? 1 : 2" [rowHeight]="(isHandset$ | async) ? '480px' : '350px'">
+  <h1 class="mat-h1">주문의 흔적 그래프</h1>
+  <mat-grid-list [cols]="(isHandset$ | async) ? 1 : 2" [rowHeight]="'350px'">
     <mat-grid-tile [colspan]="1" [rowspan]="3">
       <mat-card class="dashboard-card">
         <mat-card-header>
