--- a/src/app/upgrade/containers/upgrade-matrix.component.html
+++ b/src/app/upgrade/containers/upgrade-matrix.component.html
@@ -14,10 +14,10 @@
               <input formControlName="upgradeLimit" matInput placeholder="업그레이드 횟수 (황망 제외)">
             </mat-form-field>
             <mat-form-field>
-              <input formControlName="upgradePercentage" matInput placeholder="주문의 흔적 확률 (0~1)">
+              <input formControlName="upgradePercentage" matInput placeholder="업그레이드 확률 (0~1)">
             </mat-form-field>
             <mat-form-field>
-              <input formControlName="upgradePrice" matInput placeholder="주문의 흔적 가격 (10,000 단위)">
+              <input formControlName="upgradePrice" matInput placeholder="업그레이드 1회당 가격 (10,000 단위)">
             </mat-form-field>
             <mat-form-field>
               <input formControlName="innocentPercentage" matInput placeholder="이노센트 주문서 확률 (0~1)">
