--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,11 @@
         <mat-icon mat-list-icon>format_list_numbered</mat-icon>
         <span mat-line>최적화</span>
       </a>
+      <mat-divider></mat-divider>
+      <a mat-list-item routerLink="randombox">
+        <mat-icon mat-list-icon>apps</mat-icon>
+        <span mat-line>확률형 아이템</span>
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
