--- a/src/app/randombox/containers/randombox.component.html
+++ b/src/app/randombox/containers/randombox.component.html
@@ -1,5 +1,5 @@
 <div class="grid-container">
-  <h1 class="mat-h1">Randombox</h1>
+  <h1 class="mat-h1">확률형 아이템</h1>
   <mat-tab-group [dynamicHeight]="true">
     <mat-tab label="골드애플">
       <div class="table-container mat-elevation-z8">
