--- a/src/app/deal/components/hyper-stat.component.html
+++ b/src/app/deal/components/hyper-stat.component.html
@@ -98,19 +98,19 @@
           </tr>
           <tr>
             <th>
-              크확
+              크리티컬 확률
             </th>
             <td>{{ stat.criticalRate }}%</td>
           </tr>
           <tr>
             <th>
-              크뎀
+              크리티컬 데미지
             </th>
             <td>{{ stat.criticalDamage }}%</td>
           </tr>
           <tr>
             <th>
-              보공
+              보스 공격력
             </th>
             <td>{{ stat.bossDamage }}%</td>
           </tr>
