--- a/src/app/deal/components/skill-stat.component.html
+++ b/src/app/deal/components/skill-stat.component.html
@@ -39,7 +39,7 @@
   </mat-card>
   <mat-card>
     <mat-card-title>
-      환산 스탯 - 패시브
+      환산 스탯 (패시브)
     </mat-card-title>
   </mat-card>
 </div>
