--- a/src/app/deal/containers/deal.component.html
+++ b/src/app/deal/containers/deal.component.html
@@ -17,18 +17,20 @@
         <app-hyper-stat [level]="level.value"></app-hyper-stat>
       </mat-tab>
       <mat-tab label="아이템"></mat-tab>
+      <mat-tab label="V 매트릭스">
+        <app-v-matrix-stat [job]="job.value"></app-v-matrix-stat>
+      </mat-tab>
       <mat-tab label="스킬">
         <app-skill-stat [job]="job.value"></app-skill-stat>
       </mat-tab>
       <mat-tab label="아케인 심볼">
         <app-arcane-symbol-stat [job]="job.value"></app-arcane-symbol-stat>
       </mat-tab>
-      <mat-tab label="어빌리티"></mat-tab>
+      <!-- <mat-tab label="어빌리티"></mat-tab> -->
       <mat-tab label="유니온"></mat-tab>
-      <mat-tab label="성향"></mat-tab>
+      <mat-tab label="성향">
+        <app-disposition-stat></app-disposition-stat>
+      </mat-tab>
     </mat-tab-group>
-    <mat-card>
-      <mat-card-title></mat-card-title>
-    </mat-card>
   </div>
 </div>
