--- a/src/app/deal/containers/deal.component.html
+++ b/src/app/deal/containers/deal.component.html
@@ -24,7 +24,9 @@
         <app-arcane-symbol-stat [job]="job.value"></app-arcane-symbol-stat>
       </mat-tab>
       <mat-tab label="어빌리티"></mat-tab>
-      <mat-tab label="유니온"></mat-tab>
+      <mat-tab label="유니온">
+        <app-union-stat></app-union-stat>
+      </mat-tab>
       <mat-tab label="성향"></mat-tab>
     </mat-tab-group>
     <mat-card>
