--- a/src/app/deal/components/v-matrix-stat.component.html
+++ b/src/app/deal/components/v-matrix-stat.component.html
@@ -59,6 +59,10 @@
             <td>{{ stat?.weaponAttack }}</td>
           </tr>
           <tr>
+            <th>체력</th>
+            <td>{{ stat?.maxHP }}</td>
+          </tr>
+          <tr>
             <th>상태이상 내성</th>
             <td>{{ stat?.ccImmune }}</td>
           </tr>
