--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,17 +13,16 @@
         <span mat-line>최적화</span>
       </a>
       <mat-divider></mat-divider>
-      <a mat-list-item routerLink="deal">
-        <mat-icon mat-list-icon>blur_circular</mat-icon>
+      <h3 mat-subheader>스펙</h3>
+      <!-- <a mat-list-item routerLink="deal">
+        <mat-icon mat-list-icon>keyboard</mat-icon>
         <span mat-line>계산</span>
-      </a>
+      </a> -->
+      <mat-divider></mat-divider>
+      <h3 mat-subheader>기타</h3>
       <a mat-list-item routerLink="arcane-force">
         <mat-icon mat-list-icon>blur_circular</mat-icon>
         <span mat-line>아케인포스</span>
-      </a>
-      <a mat-list-item routerLink="randombox">
-        <mat-icon mat-list-icon>apps</mat-icon>
-        <span mat-line>확률형 아이템</span>
       </a>
     </mat-nav-list>
   </mat-sidenav>
