--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,14 @@
         <span mat-line>최적화</span>
       </a>
       <mat-divider></mat-divider>
+      <h3 mat-subheader>사냥</h3>
+      <a mat-list-item routerLink="grinding">
+        <mat-icon mat-list-icon>place</mat-icon>
+        <span mat-line>사냥터</span>
+      </a>
+      <!-- <mat-divider></mat-divider>
       <h3 mat-subheader>스펙</h3>
-      <!-- <a mat-list-item routerLink="deal">
+      <a mat-list-item routerLink="deal">
         <mat-icon mat-list-icon>keyboard</mat-icon>
         <span mat-line>계산</span>
       </a> -->
