--- a/src/styles.css
+++ b/src/styles.css
@@ -33,3 +33,37 @@ table.vertical-table tr:first-child > th,
 table.vertical-table tr:first-child > td {
   border-top: 0;
 }
+
+.w-100 {
+  width: 100%;
+}
+
+.h-100 {
+  height: 100%;
+}
+
+.no-margin {
+  margin: 0 !important;
+}
+
+.flexible-box {
+  display: flex;
+}
+
+.vertical-center {
+  align-items: center;
+}
+
+.horizontal-center {
+  justify-content: center;
+}
+
+.flex-d-column {
+  flex-direction: column;
+}
+
+.horizontal-split {
+  justify-content: space-between;
+}
+
+.mt-5 { margin-top: 5px !important; } .mr-5 { margin-right: 5px !important; } .mb-5 { margin-bottom: 5px !important; } .ml-5 { margin-left: 5px !important; }
