--- a/src/app/upgrade/containers/upgrade-matrix.component.html
+++ b/src/app/upgrade/containers/upgrade-matrix.component.html
@@ -2,7 +2,7 @@
   <h1 class="mat-h1">주문의 흔적 최적화</h1>
   <mat-grid-list [cols]="(isHandset$ | async) ? 1 : 2" rowHeight="750px">
     <mat-grid-tile [colspan]="1" [rowspan]="1">
-      <mat-card class="dashboard-card">
+      <mat-card class="dashboard-card elegant-card">
         <mat-card-header>
           <mat-card-title>
             정보 입력
