--- a/src/app/grinding/containers/grinding.component.html
+++ b/src/app/grinding/containers/grinding.component.html
@@ -59,14 +59,14 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           시간당 최대 순경험치
         </th>
-        <td mat-cell *matCellDef="let row">{{ row.expPerHour | number:'.0-0' }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.expPerHour | number }}</td>
       </ng-container>
 
       <ng-container matColumnDef="mesoPerHour">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           시간당 최대 순메소
         </th>
-        <td mat-cell *matCellDef="let row">{{ row.mesoPerHour | number:'.0-0' }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.mesoPerHour | number }}</td>
       </ng-container>
 
       <ng-container matColumnDef="burning">
