--- a/src/app/upgrade/containers/upgrade.component.html
+++ b/src/app/upgrade/containers/upgrade.component.html
@@ -2,14 +2,20 @@
   <h1 class="mat-h1">주문의 흔적 그래프</h1>
   <mat-grid-list [cols]="(isHandset$ | async) ? 1 : 2" [rowHeight]="'350px'">
     <mat-grid-tile [colspan]="1" [rowspan]="3">
-      <mat-card class="dashboard-card">
+      <mat-card class="dashboard-card elegant-card">
         <mat-card-header>
-          <mat-card-title>
-            정보 입력
-          </mat-card-title>
+          <div class="flexible-box horizontal-split vertical-center w-100">
+            <mat-card-title>
+              정보 입력
+            </mat-card-title>
+            <div>
+              <button (click)="initializeUpgradeForm()" mat-raised-button color="primary" class="mr-5">초기화</button>
+              <button (click)="saveForm()" mat-raised-button color="primary">저장</button>
+            </div>
+          </div>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
-          <form [formGroup]="formGroup" class="upgrade-form">
+          <form [(formGroup)]="formGroup" class="upgrade-form">
             <mat-form-field>
               <input formControlName="upgradeLimit" matInput placeholder="업그레이드 횟수 (황망 제외)">
             </mat-form-field>
