--- a/src/app/upgrade/containers/upgrade.component.html
+++ b/src/app/upgrade/containers/upgrade.component.html
@@ -15,7 +15,7 @@
           </div>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
-          <form [(formGroup)]="formGroup" class="upgrade-form">
+          <form [formGroup]="formGroup" class="upgrade-form">
             <mat-form-field>
               <input formControlName="upgradeLimit" matInput placeholder="업그레이드 횟수 (황망 제외)">
             </mat-form-field>
