--- a/src/styles.css
+++ b/src/styles.css
@@ -33,3 +33,30 @@ table.vertical-table tr:first-child > th,
 table.vertical-table tr:first-child > td {
   border-top: 0;
 }
+
+.w-100 {
+  width: 100%;
+}
+
+.h-100 {
+  height: 100%;
+}
+
+.no-margin {
+  margin: 0 !important;
+}
+
+.flexible-box {
+  display: flex;
+}
+
+.vertical-center {
+  align-items: center;
+}
+
+.horizontal-split {
+  justify-content: space-between;
+}
+
+.mr-5 { margin-right: 5px !important; }
+.mb-5 { margin-bottom: 5px !important; }
