feat: add reference

--- a/src/app/grinding/containers/grinding.component.html
+++ b/src/app/grinding/containers/grinding.component.html
@@ -1,5 +1,6 @@
 <div class="grid-container">
   <h1 class="mat-h1">사냥터</h1>
+  <div class="mat-caption">셀라스, 문브, 리멘, 세르니움 출처: https://gall.dcinside.com/board/view/?id=maplestory&no=13081693</div>
   <form [formGroup]="formGroup">
     <mat-form-field appearance="fill">
       <mat-label>플레이어 레벨</mat-label>
