--- a/src/app/grinding/containers/grinding.component.html
+++ b/src/app/grinding/containers/grinding.component.html
@@ -47,26 +47,26 @@
       </ng-container>
 
       <ng-container matColumnDef="count">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>몹젠수</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header start="desc">몹젠수</th>
         <td mat-cell *matCellDef="let row">{{ row.count | number }}</td>
       </ng-container>
 
       <ng-container matColumnDef="countPerHour">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header start="desc">
           1시간당 최대마리수
         </th>
         <td mat-cell *matCellDef="let row">{{ row.countPerHour | number }}</td>
       </ng-container>
 
       <ng-container matColumnDef="expPerHour">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header start="desc">
           시간당 최대 순경험치
         </th>
         <td mat-cell *matCellDef="let row">{{ row.expPerHour | number:'.0-0' }}</td>
       </ng-container>
 
       <ng-container matColumnDef="mesoPerHour">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header start="desc">
           시간당 최대 순메소
         </th>
         <td mat-cell *matCellDef="let row">{{ row.mesoPerHour | number:'.0-0' }}</td>
