fix: expBuff label

--- a/src/app/grinding/containers/grinding.component.html
+++ b/src/app/grinding/containers/grinding.component.html
@@ -7,7 +7,7 @@
       <input matInput type="number" formControlName="playerLevel" />
     </mat-form-field>
     <mat-form-field appearance="fill">
-      <mat-label>경험치 배율</mat-label>
+      <mat-label>추가 경험치 배율</mat-label>
       <input matInput type="number" formControlName="expBuff" />
       <span matSuffix>%</span>
     </mat-form-field>
