feat: skill range

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,10 @@
         <mat-icon mat-list-icon>blur_circular</mat-icon>
         <span mat-line>아케인포스</span>
       </a>
+      <a mat-list-item routerLink="skill">
+        <mat-icon mat-list-icon>photo_size_select_small</mat-icon>
+        <span mat-line>스킬 범위</span>
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
