--- a/src/app/skill/containers/skill/skill.component.html
+++ b/src/app/skill/containers/skill/skill.component.html
@@ -120,9 +120,9 @@
       <form [formGroup]="formGroup">
         <div class="row">
           <span>직업</span>
-          <input formControlName="job" class="job-input" matInput />
+          <input formControlName="job" class="job-input" />
           <span>스킬명</span>
-          <input formControlName="skill" class="skill-input" matInput />
+          <input formControlName="skill" class="skill-input" />
         </div>
       </form>
       <mat-list class="skill-list">
