--- a/src/app/grinding/containers/grinding.component.html
+++ b/src/app/grinding/containers/grinding.component.html
@@ -134,6 +134,7 @@
       <mat-checkbox formControlName="리멘">리멘</mat-checkbox>
       <mat-checkbox formControlName="세르니움(전)">세르니움(전)</mat-checkbox>
       <mat-checkbox formControlName="세르니움(후)">세르니움(후)</mat-checkbox>
+      <mat-checkbox formControlName="아르크스">아르크스</mat-checkbox>
     </div>
   </form>
   <div class="margin-top mat-elevation-z8">
